<resources>
    <string name="app_name">BidBlast</string>
    <string name="global_email">Correo</string>
    <string name="global_password">Contraseña</string>
    <string name="global_full_name">Nombre completo <font color="#FF5C00">*</font></string>
    <string name="global_field_restrictions">Los campos marcados con un <font color="#FF5C00">*</font> son obligatorios</string>
    <string name="global_cancel">Cancelar</string>
    <string name="global_yes">Sí</string>
    <string name="global_no">No</string>
    <string name="global_sign_out_confirmation_message">¿Está seguro que desea cerrar sesión e ir a la ventana de inicio de sesión?</string>
    <string name="login_welcome_back">¡Bienvenido de nuevo!</string>
    <string name="login_welcome_description">Sigue participando en las subastas más interesantes del momento.</string>
    <string name="login_email_example">ejemplo@gmail.com</string>
    <string name="login_main_action">Iniciar sesión</string>
    <string name="login_account_question">¿No tienes una cuenta?</string>
    <string name="login_register_action">Regístrate</string>
    <string name="login_email_error">Debe ingresar un correo electrónico válido</string>
    <string name="login_password_error">Debe ingresar una contraseña</string>
    <string name="login_error_toast_message">No fue posible iniciar sesión, intente más tarde</string>
    <string name="login_invalid_credentials_toast_message">Revise sus credenciales y vuelva a intentarlo</string>
    <string name="login_session_finished_toast_message">Su sesión ha caducado, por favor inicie sesión nuevamente</string>
    <string name="searchauction_searchbar_hint">Buscar subasta</string>
    <string name="searchauction_search_button_action">Buscar</string>
    <string name="searchauction_make_offer_action">Hacer oferta</string>
    <string name="searchauction_filters_action">Filtros</string>
    <string name="searchauction_filters_categories">Categorías</string>
    <string name="searchauction_filters_prices">Precios</string>
    <string name="searchauction_filters_show_results">Mostrar resultados</string>
    <string name="searchauction_cta_empty_offers">¡Sé el primero!</string>
    <string name="searchauction_available_until">Disponible hasta el %s</string>
    <string name="searchauction_price_filters_note">Nota: los filtros de precio aplican sobre el precio base de las subastas</string>
    <string name="searchauction_all_auctions_loaded">Todas las subastas cargadas</string>
    <string name="searchauction_empty_auctions_title">¡Sin coincidencias!</string>
    <string name="searchauction_empty_auctions_text">No hemos encontrado ningún artículo subastado que coincida con su búsqueda</string>
    <string name="searchauction_loading_auctions">Cargando subastas...</string>
    <string name="searchauction_error_loading_title">¡Estamos teniendo problemas!</string>
    <string name="searchauction_error_loading_text">En este momento no podemos cargar las subastas, por favor intente en otro momento</string>
    <string name="signup_create_account">¡Crea una cuenta!</string>
    <string name="signup_mandatory_email">Correo <font color="#FF5C00">*</font></string>
    <string name="signup_phone_number">Número telefónico</string>
    <string name="signup_mandatory_password">Contraseña <font color="#FF5C00">*</font></string>
    <string name="signup_confirm_password">Confirmar contraseña <font color="#FF5C00">*</font></string>
    <string name="signup_select_photo">Seleccionar foto</string>
    <string name="savecategory_modify_tittle">Modificar categoría</string>
    <string name="savecategory_register_tittle">Registrar categoría</string>
    <string name="savecategory_cancel_action">Cancelar</string>
    <string name="savecategory_category_title">Título de la categoría <font color="#FF5C00">*</font></string>
    <string name="savecategory_category_example">Ej. Coleccionables</string>
    <string name="savecategory_category_description">Descripción de la categoría <font color="#FF5C00">*</font></string>
    <string name="savecategory_category_description_example">Descripción breve de los artículos que se encuentran en esta categoría</string>
    <string name="savecategory_keywords">Palabras clave <font color="#FF5C00">*</font></string>
    <string name="savecategory_keywords_example">Ej. Comics, monedas, historia</string>
    <string name="savecategory_category_title_error">Ingrese un título para la categoría</string>
    <string name="savecategory_category_description_error">Ingrese un título para la categoría</string>
    <string name="savecategory_category_keywords_error">Ingrese al menos tres palabras clave, separadas por comas"</string>
    <string name="savecategory_error_message">No fue posible modificar la categoría, intente más tarde</string>
    <string name="savecategory_title_already_exists_toast_message">Ya existe ese título registrado, ingrese otro</string>
    <string name="savecategory_not_found_toast_message">No se encontró la categoría</string>
    <string name="savecategory_success_message">Información de la categoría guardada con éxito</string>
    <string name="savecategory_confirmation_message">¿Estás seguro de guardar la información de la categoría?</string>
    <string name="getAuction_title">Ofertas en la subasta</string>
    <string name="getAuction_error_loading_title">¡Estamos teniendo problemas para cargar la subasta!</string>
    <string name="getAuction_error_loading_text">En este momento no podemos cargar la subasta, por favor intente en otro momento!</string>
    <string name="consultoffers_all_offers_loaded">Todas las ofertas cargadas</string>
    <string name="consultoffers_loading_offers">Cargando ofertas...</string>
    <string name="consultoffers_error_loading_title">¡Estamos teniendo problemas con las ofertas!</string>
    <string name="consultoffers_error_loading_text">En este momento no podemos cargar las ofertas, por favor intente en otro momento</string>
    <string name="consultoffers_empty_offers_title">¡Aún no tienes ofertas!</string>
    <string name="consultoffers_empty_offers_text">Por el momento no tienes ofertas en la subasta, las nuevas ofertas aparecerán aquí</string>
    <string name="consultoffers_block_customer">Bloquear comprador</string>
    <string name="consultoffers_last_offers_title">Últimas ofertas</string>
    <string name="consultoffers_block_user_confirmation_message">¿Estás seguro de que deseas bloquear al comprador?</string>
    <string name="consultoffers_block_user_success_message">Comprador bloqueado con éxito</string>
    <string name="consultoffers_user_already_blocked_message">El usuario ya fue bloqueado anteriormente</string>
    <string name="consultoffers_block_user_error_message">No se pudo bloquear al comprador, inténtelo de nuevo más tarde</string>
    <string name="consultcompletedauctions_searchbar_hint">Buscar en compras</string>
    <string name="consultcompletedauctions_purchased_date_message">Comprado el %s</string>
    <string name="consultcompletedauctions_empty_completed_auctions_title">¡Aún no tienes compras!</string>
    <string name="consultcompletedauctions_empty_completed_auctions_text">Por el momento no tienes subastas compradas, las subastas que compres aparecerán aquí</string>
    <string name="consultcompletedauctions_empty_completed_auctions_by_search_title">¡Sin coincidencias!</string>
    <string name="consultcompletedauctions_empty_completed_auctions_by_search_text">No hemos encontrado ninguna subasta comprada que coincida con su búsqueda</string>
    <string name="consultcompletedauctions_loading_completed_auctions">Cargando subastas compradas...</string>
    <string name="consultcompletedauctions_error_loading_title">¡Estamos teniendo problemas!</string>
    <string name="consultcompletedauctions_error_loading_text">En este momento no podemos cargar las subastas compradas, por favor intente en otro momento</string>
    <string name="consultcreatedauctions_searchbar_hint">Buscar en ventas</string>
    <string name="consultcreatedauctions_see_offers_made">Ver ofertas realizadas</string>
    <string name="consultcreatedauctions_sold_date_message">Vendido el %s</string>
    <string name="consultcreatedauctions_available_date_message">Disponible hasta el %s</string>
    <string name="consultcreatedauctions_closed_date_message">Se cerró el %s</string>
    <string name="consultcreatedauctions_rejected_date_message">Se rechazó el %s</string>
    <string name="consultcreatedauctions_first_proposed_time_message">Propuesto para %s</string>
    <string name="consultcreatedauctions_second_proposed_time_message">%d días en subasta</string>
    <string name="consultcreatedauctions_empty_created_auctions_title">¡Aún no tienes subastas creadas!</string>
    <string name="consultcreatedauctions_empty_created_auctions_text">Por el momento no tienes subastas propias, las subastas que crees aparecerán aquí</string>
    <string name="consultcreatedauctions_empty_created_auctions_by_search_title">¡Sin coincidencias!</string>
    <string name="consultcreatedauctions_empty_created_auctions_by_search_text">No hemos encontrado ninguna subasta creada que coincida con su búsqueda</string>
    <string name="consultcreatedauctions_loading_created_auctions">Cargando subastas creadas...</string>
    <string name="consultcreatedauctions_error_loading_title">¡Estamos teniendo problemas!</string>
    <string name="consultcreatedauctions_error_loading_text">En este momento no podemos cargar las subastas creadas, por favor intente en otro momento</string>
    <string name="consultcreatedauctions_sales_statistics_action">Estadísticas de ventas</string>
    <string name="consultcreatedauctions_auction_rejected_state_text">Subasta rechazada %s</string>
    <string name="consultcreatedauctions_auction_last_offer_title">Última oferta</string>
    <string name="consultcreatedauctions_auction_base_price_title">Precio base</string>
    <string name="consultcreatedauctions_auction_minimum_bid_title">Puja mínima</string>
    <string name="consultcreatedauctions_auction_closed_without_offers_text">No hubo ofertas realizadas</string>
    <string name="consultcreatedauctions_auction_published_without_offers_text">Aún no hay ofertas realizadas</string>
    <string name="consultsalesstatistics_title">Estadísticas de ventas</string>
    <string name="consultsalesstatistics_date_range">Seleccione un rango de fechas</string>
    <string name="consultsalesstatistics_featured_sales_day">Día de ventas destacado</string>
    <string name="consultsalesstatistics_first_featured_day_message">¡Muchas felicidades! en este día lograste concretar</string>
    <string name="postitem_view_header">Crea tu subasta</string>
    <string name="postitem_title">Título <font color="#FF5C00">*</font></string>
    <string name="postitem_item_state">Estado del artículo <font color="#FF5C00">*</font></string>
    <string name="postitem_description">Descripción <font color="#FF5C00">*</font></string>
    <string name="postitem_opening_days">Días de apertura de subasta <font color="#FF5C00">*</font></string>
    <string name="postitem_next">Siguiente</string>
    <string name="postitem_title_error">Ingrese un título para la subasta</string>
    <string name="postitem_item_status_error">Seleccione el estado de su artículo</string>
    <string name="postitem_description_error">Ingrese una descripción para su artículo</string>
    <string name="postitem_opening_days_error">Ingrese los días de apertura de la subasta</string>
    <string name="mainmenu_auctions">Subastas</string>
    <string name="mainmenu_purchases">Compras</string>
    <string name="mainmenu_sales">Ventas</string>
    <string name="mainmenu_new_auction">Subastar</string>
    <string name="moderatormenu_categories">Categorías</string>
    <string name="moderatormenu_auctions">Subastas</string>
    <string name="moderatormenu_statistics">Estadísticas</string>
</resources>