<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="12sp"
        android:layout_marginLeft="12sp"
        android:layout_marginTop="30sp"
        android:orientation="vertical"
        tools:context=".login.LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/TvTitleStyle"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginBottom="16sp"/>
        
        <ImageView
            android:layout_width="300sp"
            android:layout_height="232sp"
            android:src="@drawable/login_welcome"
            android:layout_gravity="center"
            android:layout_marginBottom="32sp"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome_back"
            style="@style/TvTitleStyle"
            android:textAlignment="center"
            android:layout_marginBottom="16sp"/>

        <TextView
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_welcome_description"
            android:textAlignment="center"
            android:layout_marginBottom="40sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/global_email"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_example"
            android:layout_marginBottom="16sp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            style="@style/EdTxtGenericStyle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/global_password"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="************"
            android:layout_marginBottom="24sp"
            tools:ignore="HardcodedText"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            style="@style/EdTxtGenericStyle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BtnPrimaryStyle"
            android:text="@string/login_main_action"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="24sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_account_question"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/secondary"
                android:text="@string/login_register_action"
                android:layout_marginStart="4sp"/>
        </LinearLayout>
    </LinearLayout>
</layout>