<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".usecases.createauction.CreateAuctionViewModel"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_primary"
                android:padding="12dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postitem_view_header"
                    style="@style/TvTitleStyle"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/cancelCreateAuctionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    style="@style/BtnTernaryStyle"
                    android:text="@string/global_cancel"
                    android:textColor="@color/secondary"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/global_field_restrictions"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/postitem_title"
                    style="@style/TvBlackTagDecoratorStyle"/>

                <EditText
                    android:id="@+id/auctionTitleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:layout_marginBottom="4dp"
                    style="@style/EdTxtGenericStyle"/>
                <TextView
                    android:id="@+id/auctionTitleErrorTextView"
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TvErrorField"
                    android:text="@string/postitem_title_error"
                    android:visibility="gone"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/postitem_item_state"
                    style="@style/TvBlackTagDecoratorStyle"/>
                <Spinner
                    android:id="@+id/itemStatusSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SpinnerGenericStyle"
                    android:layout_marginBottom="4dp"/>
                <TextView
                    android:id="@+id/itemStatusErrorTextView"
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TvErrorField"
                    android:text="@string/postitem_item_status_error"
                    android:visibility="gone"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/postitem_description"
                    style="@style/TvBlackTagDecoratorStyle"/>

                <EditText
                    android:id="@+id/itemDesctiptionEditText"
                    style="@style/EdTxtGenericStyle"
                    android:layout_width="match_parent"
                    android:layout_height="132dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="top|start"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:overScrollMode="always"
                    android:scrollbars="vertical" />
                <TextView
                    android:id="@+id/itemDescriptionErrorTextView"
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TvErrorField"
                    android:text="@string/postitem_description_error"
                    android:visibility="gone"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/postitem_opening_days"
                    style="@style/TvBlackTagDecoratorStyle"/>

                <EditText
                    android:id="@+id/openingDaysEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:layout_marginBottom="4dp"
                    style="@style/EdTxtGenericStyle"/>
                <TextView
                    android:id="@+id/openingDaysErrorTextView"
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TvErrorField"
                    android:text="@string/postitem_opening_days_error"
                    android:visibility="gone"/>
                <Button
                    android:id="@+id/nextFragmentButton"
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_height="wrap_content"
                    style="@style/BtnPrimaryStyle"
                    android:text="@string/postitem_next"
                    android:layout_marginBottom="50dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
