<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="auctionCategory"
            type="com.bidblast.model.AuctionCategory" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".usecases.registerandmodifycategory.AuctionCategoryFormFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_primary"
                android:padding="12dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/discardModifyAuctionCategoryButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/go_back_icon"
                    android:importantForAccessibility="no" />
                <TextView
                    android:id="@+id/titleFormTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/savecategory_modify_tittle"
                    android:layout_marginStart="15dp"
                    style="@style/TvHeaderTitleStyle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/cancelSaveCategoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    style="@style/BtnTernaryStyle"
                    android:text="@string/savecategory_cancel_action"
                    android:textColor="@color/secondary"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/global_field_restrictions"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/savecategory_category_title"
                    style="@style/TvBlackTagDecoratorStyle"/>
                <EditText
                    android:id="@+id/categoryTitleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoEnterAction"
                    android:importantForAutofill="no"
                    android:text="@{auctionCategory.title}"
                    android:hint="@string/savecategory_category_example"
                    style="@style/EdTxtGenericStyle"/>
                <TextView
                    android:id="@+id/categoryTitleErrorTextView"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TvErrorField"
                    android:text="@string/savecategory_category_title_error"
                    android:visibility="gone"/>

                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/savecategory_category_description"
                    style="@style/TvBlackTagDecoratorStyle"/>
                <EditText
                    android:id="@+id/categoryDescriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:maxLength="1000"
                    android:imeOptions="flagNoEnterAction"
                    android:importantForAutofill="no"
                    android:scrollHorizontally="false"
                    android:text="@{auctionCategory.description}"
                    android:hint="@string/savecategory_category_description_example"
                    style="@style/EdTxtGenericStyle"/>
                <TextView
                    android:id="@+id/categoryDescriptionErrorTextView"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TvErrorField"
                    android:text="@string/savecategory_category_description_error"
                    android:visibility="gone"/>

                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/savecategory_keywords"
                    style="@style/TvBlackTagDecoratorStyle"/>
                <EditText
                    android:id="@+id/categoryKeywordsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:maxLength="1000"
                    android:imeOptions="flagNoEnterAction"
                    android:importantForAutofill="no"
                    android:scrollHorizontally="false"
                    android:text="@{auctionCategory.keywords}"
                    android:hint="@string/savecategory_keywords_example"
                    style="@style/EdTxtGenericStyle"/>
                <TextView
                    android:id="@+id/categoryKeywordsErrorTextView"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TvErrorField"
                    android:text="@string/savecategory_category_keywords_error"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/saveCategoryButton"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/BtnPrimaryStyle"
                    android:text="@string/savecategory_modify_tittle"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>